--- a/src/pages/praxisphase.astro
+++ b/src/pages/praxisphase.astro
@@ -75,7 +75,7 @@ import ScrollColumns from '@compositions/ScrollColumns.astro';
     >
   </Banner>
   <div class="flex cols center gap-2 pad-8" slot="footer-links">
-    <LabLinkButton href="/kurse/kurs1">Kurs: Daten verstehen</LabLinkButton>
-    <LabLinkButton href="/kurse/kurs2">Kurs: Daten nutzen</LabLinkButton>
+    <LabLinkButton href="/kurse/kurs-daten-verstehen">Kurs: Daten verstehen</LabLinkButton>
+    <LabLinkButton href="/kurse/kurs-daten-nutzen">Kurs: Daten nutzen</LabLinkButton>
   </div>
 </KursLayout>
