--- a/src/compositions/CoursesCards.astro
+++ b/src/compositions/CoursesCards.astro
@@ -91,8 +91,8 @@ const bullets = {
 
     <Fragment slot="footer">
       <div>
-        <LabLinkButton href="/kurse/kurs1">Daten verstehen</LabLinkButton>
-        <LabLinkButton href="/kurse/kurs2">Daten nutzen</LabLinkButton>
+        <LabLinkButton href="/kurse/kurs-daten-verstehen">Daten verstehen</LabLinkButton>
+        <LabLinkButton href="/kurse/kurs-daten-nutzen">Daten nutzen</LabLinkButton>
       </div>
     </Fragment>
   </CardPlain>
