--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -114,8 +114,8 @@ const people = [
       </ColumnsSection>
 
       <div class="flex cols center gap-2 pt-0 pad-8">
-        <LabLinkButton href="/kurse/kurs1">Kurs: Daten verstehen</LabLinkButton>
-        <LabLinkButton href="/kurse/kurs2">Kurs: Daten nutzen</LabLinkButton>
+        <LabLinkButton href="/kurse/kurs-daten-verstehen">Kurs: Daten verstehen</LabLinkButton>
+        <LabLinkButton href="/kurse/kurs-daten-nutzen">Kurs: Daten nutzen</LabLinkButton>
         <LabLinkButton href="/praxisphase">Praxisphase</LabLinkButton>
       </div>
     </div>
