--- a/src/pages/kurse.astro
+++ b/src/pages/kurse.astro
@@ -1,1 +1,1 @@
-<meta http-equiv="refresh" content="0; url=/kurse/kurs1" />
+<meta http-equiv="refresh" content="0; url=/kurse/kurs-daten-verstehen" />
