--- a/src/compositions/CoursesCards.astro
+++ b/src/compositions/CoursesCards.astro
@@ -91,8 +91,8 @@ const bullets = {
 
     <Fragment slot="footer">
       <div>
-        <LabLinkButton href="/kurse/kurs-daten-verstehen">Daten verstehen</LabLinkButton>
-        <LabLinkButton href="/kurse/kurs-daten-nutzen">Daten nutzen</LabLinkButton>
+        <LabLinkButton href="/kurse/kurs-daten-verstehen">Kurs: Daten verstehen</LabLinkButton>
+        <LabLinkButton href="/kurse/kurs-daten-nutzen">Kurs: Daten nutzen</LabLinkButton>
       </div>
     </Fragment>
   </CardPlain>
@@ -125,7 +125,9 @@ const bullets = {
     </Fragment>
     <Fragment slot="footer">
       <div>
-        <LinkButton href="/praxisphase" classes="btn-secondary">Mehr zur Praxisphase</LinkButton>
+        <LabLinkButton href="/praxisphase" classes="btn-secondary"
+          >Mehr zur Praxisphase</LabLinkButton
+        >
       </div>
     </Fragment>
   </CardPlain>
