--- a/src/pages/kurse/kurs-daten-nutzen.astro
+++ b/src/pages/kurse/kurs-daten-nutzen.astro
@@ -120,7 +120,7 @@ import * as KursSchedule from '@content/kurse/kurs_2_schedule.md';
   <section class="pt-0">
     <figure aria-describedby="kurs-timeline">
       <a href="/assets/CorrelLAB_Daten_nutzen_Onepager.pdf" target="_blank" download>
-        <Image src={FlyerKurs} alt="Flyer Kurs: Daten verstehen" /></a
+        <Image src={FlyerKurs} alt="Flyer Kurs: Daten nutzen" /></a
       >
       <figcaption class="contained">
         <div>
