--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -30,6 +30,7 @@ const { title = 'CorrelLAB' } = Astro.props;
     <meta property="og:type" content="website" />
     <meta property="og:locale" content="de_DE" />
     <meta property="og:site_name" content="CorrelLAB" />
+    <link rel="sitemap" href="/sitemap-index.xml" />
     <ClientRouter />
     <script defer data-domain="lab.correlaid.org" src="https://plausible.io/js/script.js"></script>
   </head>
