--- a/src/pages/praxisphase.astro
+++ b/src/pages/praxisphase.astro
@@ -59,21 +59,7 @@ import ScrollColumns from '@compositions/ScrollColumns.astro';
     </LabLinkButton>
   </section>
   <PeopleSection people={people} />
-  <Banner slot="banner">
-    <Fragment slot="title">Interessiert?</Fragment>
-    <Fragment slot="body">
-      <p class="light">
-        Wir sind immer auf der Suche nach ehrenamtlichen Tutor*innen für unseren nächsten Kurs!
-      </p>
-      <p class="light">Melde dich dazu einfach kurz bei unserem Bildungsteam.</p>
-    </Fragment>
-    <LinkButton
-      variant="btn-light"
-      href="mailto:education@correlaid.org"
-      classes="btn-icon"
-      slot="cta"><MailIcon height={'20'} /> Nachricht schreiben</LinkButton
-    >
-  </Banner>
+  <Banner slot="banner" />
   <div class="flex cols center gap-2 pad-8" slot="footer-links">
     <LabLinkButton href="/kurse/kurs-daten-verstehen">Kurs: Daten verstehen</LabLinkButton>
     <LabLinkButton href="/kurse/kurs-daten-nutzen">Kurs: Daten nutzen</LabLinkButton>
