fixes (wrap title & footer)

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -96,7 +96,7 @@ const people = [
       <Banner />
 
       <ColumnsSection center_title glue>
-        <h2 slot="title">Eure Ansprechpartnerinnen</h2>
+        <h2 slot="title">Eure Ansprech&shy;partner&shy;innen</h2>
         <Persona
           name={people[0].name}
           role={people[0].role}
@@ -113,7 +113,7 @@ const people = [
         />
       </ColumnsSection>
 
-      <div class="flex cols center gap-2 pt-0 pad-8">
+      <div class="flex cols center gap-2 pt-0 pad-8 wrap">
         <LabLinkButton href="/kurse/kurs-daten-verstehen">Kurs: Daten verstehen</LabLinkButton>
         <LabLinkButton href="/kurse/kurs-daten-nutzen">Kurs: Daten nutzen</LabLinkButton>
         <LabLinkButton href="/praxisphase">Praxisphase</LabLinkButton>
