--- a/src/pages/praxisphase.astro
+++ b/src/pages/praxisphase.astro
@@ -60,7 +60,7 @@ import ScrollColumns from '@compositions/ScrollColumns.astro';
   </section>
   <PeopleSection people={people} />
   <Banner slot="banner" />
-  <div class="flex cols center gap-2 pad-8" slot="footer-links">
+  <div class="flex cols center gap-2 pad-8 wrap" slot="footer-links">
     <LabLinkButton href="/kurse/kurs-daten-verstehen">Kurs: Daten verstehen</LabLinkButton>
     <LabLinkButton href="/kurse/kurs-daten-nutzen">Kurs: Daten nutzen</LabLinkButton>
   </div>
