--- a/src/pages/kurse/kurs-daten-nutzen.astro
+++ b/src/pages/kurse/kurs-daten-nutzen.astro
@@ -164,7 +164,7 @@ import * as KursSchedule from '@content/kurse/kurs_2_schedule.md';
   <PeopleSection people={people} />
 
   <Banner slot="banner" />
-  <div class="flex cols center gap-2 pad-8" slot="footer-links">
+  <div class="flex cols center gap-2 pad-8 wrap" slot="footer-links">
     <LabLinkButton href="/kurse/kurs-daten-verstehen">Kurs: Daten verstehen</LabLinkButton>
     <LabLinkButton href="/praxisphase">Zur Praxisphase</LabLinkButton>
   </div>
