--- a/src/compositions/CoursesCards.astro
+++ b/src/compositions/CoursesCards.astro
@@ -41,7 +41,7 @@ import bullets from '@data/landing-bullets.json';
     </Fragment>
 
     <Fragment slot="footer">
-      <div>
+      <div class="flex rows gap-2 align-start">
         <LabLinkButton href="/kurse/kurs-daten-verstehen">Kurs: Daten verstehen</LabLinkButton>
         <LabLinkButton href="/kurse/kurs-daten-nutzen">Kurs: Daten nutzen</LabLinkButton>
       </div>
