fix: padding for costs section

--- a/src/pages/kurse/kurs-daten-nutzen.astro
+++ b/src/pages/kurse/kurs-daten-nutzen.astro
@@ -150,7 +150,7 @@ import * as KursSchedule from '@content/kurse/kurs_2_schedule.md';
         </details>
       </figcaption>
     </figure>
-    <div class="subsection content-box narrow flex rows align-center">
+    <div class="pt-4 content-box narrow flex rows align-center">
       <Fragment set:html={await KostenContent.compiledContent()} />
     </div>
   </section>
