--- a/src/pages/kurse/kurs-daten-verstehen.astro
+++ b/src/pages/kurse/kurs-daten-verstehen.astro
@@ -151,7 +151,7 @@ import * as KursSchedule from '@content/kurse/kurs_1_schedule.md';
         </details>
       </figcaption>
     </figure>
-    <div class="subsection content-box narrow flex rows align-center">
+    <div class="pt-4 content-box narrow flex rows align-center">
       <Fragment set:html={await KostenContent.compiledContent()} />
     </div>
   </section>
@@ -164,23 +164,7 @@ import * as KursSchedule from '@content/kurse/kurs_1_schedule.md';
 
   <PeopleSection people={people} />
 
-  <Banner slot="banner">
-    {
-      /* <Fragment slot="title">Interessiert?</Fragment>
-    <Fragment slot="body">
-      <p class="light">
-        Wir sind immer auf der Suche nach ehrenamtlichen Tutor*innen für unseren nächsten Kurs!
-      </p>
-      <p class="light">Melde dich dazu einfach kurz bei unserem Bildungsteam.</p>
-    </Fragment>
-    <LinkButton
-      variant="btn-light"
-      href="mailto:education@correlaid.org"
-      classes="btn-icon"
-      slot="cta"><MailIcon height={'20'} /> Nachricht schreiben</LinkButton
-    >*/
-    }
-  </Banner>
+  <Banner slot="banner" />
 
   <div class="flex cols center gap-2 pad-8 wrap" slot="footer-links">
     <LabLinkButton href="/kurse/kurs-daten-nutzen">Kurs: Daten nutzen</LabLinkButton>
