--- a/src/styles/utils.css
+++ b/src/styles/utils.css
@@ -75,6 +75,26 @@
   padding-top: var(--space-4) !important;
 }
 
+.pb-0 {
+  padding-bottom: 0 !important;
+}
+
+.pb-1 {
+  padding-bottom: var(--space-1) !important;
+}
+
+.pb-2 {
+  padding-bottom: var(--space-2) !important;
+}
+
+.pb-3 {
+  padding-bottom: var(--space-3) !important;
+}
+
+.pb-4 {
+  padding-bottom: var(--space-4) !important;
+}
+
 .pad-0 {
   padding: 0;
 }
