feat: undo full height carousels

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -70,7 +70,7 @@ const people = [
       </ColumnsSection>
 
       <BackgroundSection
-        options={{ content_grid: true, full_height: true, center: true }}
+        options={{ content_grid: true, center: true }}
         asset={{ src: CarouselBackground.src, position: 'bottom right' }}
       >
         <Carousel slides={quotes.landing} id="carousel">
