--- a/src/pages/kurse/kurs-daten-verstehen.astro
+++ b/src/pages/kurse/kurs-daten-verstehen.astro
@@ -88,7 +88,7 @@ import * as KursSchedule from '@content/kurse/kurs_1_schedule.md';
   </ColumnsSection>
 
   <BackgroundSection
-    options={{ content_grid: true, full_height: true, center: true }}
+    options={{ content_grid: true, center: true }}
     asset={{ src: CarouselBackground.src, position: 'bottom right' }}
   >
     <!-- <Carousel slides={quotes.landing.filter((quote) => quote.k === 1)} id="carousel"> -->
