--- a/src/pages/kurse/kurs-daten-nutzen.astro
+++ b/src/pages/kurse/kurs-daten-nutzen.astro
@@ -91,7 +91,7 @@ import * as KursSchedule from '@content/kurse/kurs_2_schedule.md';
   </ColumnsSection>
 
   <BackgroundSection
-    options={{ content_grid: true, full_height: true, center: true }}
+    options={{ content_grid: true, center: true }}
     asset={{ src: CarouselBackground.src, position: 'bottom right' }}
   >
     {
