drop lang from footer

--- a/src/compositions/Footer.astro
+++ b/src/compositions/Footer.astro
@@ -79,7 +79,7 @@ const footer_footer_links = [
   <div class="footer-footer">
     <div class="copyright">CorrelAid. © {new Date().getFullYear()}</div>
     <aside>
-      <span>Deutsch</span>
+      {/* <span>Deutsch</span>*/}
       {footer_footer_links.map((link) => <a href={link.href}>{link.label}</a>)}
     </aside>
   </div>
