--- a/src/pages/praxisphase.astro
+++ b/src/pages/praxisphase.astro
@@ -15,7 +15,7 @@ const people = [
     name: 'Ann-Kristin Vester',
     role: 'Geschäftsführung',
     image: ImageAnnKristin.src,
-    email: 'lab@correlaid.org?subject=CorrelLAB&body=Hi%20Zo%C3%A9%2C',
+    email: 'lab@correlaid.org?subject=CorrelLAB&body=Hi%20Ann-Kristin%2C',
   },
 ];
 
