--- a/src/pages/praxisphase.astro
+++ b/src/pages/praxisphase.astro
@@ -8,13 +8,13 @@ import Banner from '@compositions/Banner.astro';
 import MailIcon from '@assets/svg/icons/mail.svg';
 
 import * as content from '@content/praxisphase.md';
-import ImageAnnKristin from '@assets/images/ann_kristin_vester.webp';
+import ImageAnnKristin from '@assets/images/vester-annkristin.jpeg';
 
 const people = [
   {
     name: 'Ann-Kristin Vester',
     role: 'Geschäftsführung',
-    image: ImageAnnKristin.src,
+    image: ImageAnnKristin,
     email: 'lab@correlaid.org?subject=CorrelLAB&body=Hi%20Ann-Kristin%2C',
   },
 ];
