--- a/src/components/Persona.astro
+++ b/src/components/Persona.astro
@@ -1,4 +1,5 @@
 ---
+import { getImage, Image } from 'astro:assets';
 export interface Props {
   name: string;
   role: string;
@@ -14,7 +15,7 @@ const { name, role, image, email } = Astro.props;
 
 <div class="persona">
   <div class="persona-image vignette">
-    {image && <img class="" src={image} alt={name} />}
+    {image && <Image class="" src={image} alt={name} widths={[300, 600]} />}
     {!image && <div class="persona-image-placeholder vignette" />}
   </div>
   <div class="persona-content">
