--- a/src/layouts/KursLayout.astro
+++ b/src/layouts/KursLayout.astro
@@ -31,18 +31,4 @@ const { title = 'CorrelLAB' } = Astro.props;
   </article>
 </Layout>
 
-<style>
-  /* .container {
-      padding-bottom: calc(var(--padding));
-    } */
-
-  /* TODO: if good, move to main css */
-  .section-footer {
-    margin-top: var(--space-5);
-    margin-bottom: var(--space-5);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: var(--space-4);
-  }
-</style>
+<style></style>
