--- a/src/compositions/Header.astro
+++ b/src/compositions/Header.astro
@@ -12,7 +12,7 @@ import EventTeaser from '@/components/EventTeaser.astro';
 <header>
   <div class="brand">
     <a href={pathname === '/' ? '#intro' : '/'} aria-label="Zurück zur Startseite">
-      <CorrelLabLogoWide height={'36'} />
+      <CorrelLabLogoWide height={'36'} alt="CorrelLab Logo" />
     </a>
   </div>
   <div class="desktop">
