minor: add meta description

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -24,7 +24,10 @@ const { title = 'CorrelLAB' } = Astro.props;
     <link rel="manifest" href="/site.webmanifest" />
     <meta name="generator" content={Astro.generator} />
     <title>{title}</title>
-    <!-- og -->
+    <meta
+      name="description"
+      content="CorrelLAB ist ein Programm von CorrelAid e. V., das NPOs beim Einstieg in die datengestützte Arbeit unterstützt"
+    />
     <meta property="og:title" content={title} />
     <meta property="og:description" content="CorrelLAB" />
     <meta
