--- a/src/compositions/Hero.astro
+++ b/src/compositions/Hero.astro
@@ -1,15 +1,13 @@
 ---
 import CorrelLabLogoWide from '@assets/branding/lab/Monochrom/CorrelLab horizontal.svg';
 import Background from './Hero/Background.astro';
-import LabLinkButton from '@components/LabLinkButton.astro';
-import AidLinkButton from '@components/AidLinkButton.astro';
 ---
 
 <section id="intro" class="hero" data-mode="lab">
   <Background />
   <div class="content-box">
     <div class="hero-inner">
-      <h1 class="hero-title flex align-center" role="heading" aria-level="3">
+      <h1 class="hero-title flex align-center" role="heading" aria-level="3" aria-hidden="true">
         <span class="brand">
           <CorrelLabLogoWide
             fill="white"
