aria roles for hero headings

--- a/src/pages/kurse/kurs-daten-nutzen.astro
+++ b/src/pages/kurse/kurs-daten-nutzen.astro
@@ -52,7 +52,7 @@ import * as KursSchedule from '@content/kurse/kurs_2_schedule.md';
 ---
 
 <KursLayout title="CorrelLAB: Kurs - Daten nutzen">
-  <h4 slot="subtitle">
+  <h4 slot="subtitle" role="heading" aria-level="1">
     Kurs: Daten nutzen<br />&ndash;&nbsp;Tools und Methoden praktisch anwenden
   </h4>
   <p slot="teaser">
