--- a/src/pages/praxisphase.astro
+++ b/src/pages/praxisphase.astro
@@ -23,7 +23,7 @@ import stages from '@data/praxisphase.json';
 ---
 
 <KursLayout title="CorrelLAB: Praxisphase">
-  <h4 slot="subtitle">Praxisphase</h4>
+  <h4 slot="subtitle" role="heading" aria-level="1">Praxisphase</h4>
   <p slot="teaser">
     Eure Organisation braucht Unterstützung beim Aufsetzen einer Datenbank, der Analyse von
     Statistiken, der Erstellung eines Wirkungsberichts oder beim Einsatz von künstlicher
