--- a/src/components/LabLinkButton.astro
+++ b/src/components/LabLinkButton.astro
@@ -5,7 +5,7 @@ const { href, variant = '', classes = '', children } = Astro.props;
 ---
 
 <LinkButton href={href} variant={variant} classes={[...classes, 'btn-icon btn-icon-lab']}>
-  <CorrelLabLogo class="btn-icon-svg" />
+  <CorrelLabLogo class="btn-icon-svg lab-logo-btn" alt="CorrelLAB Logo" />
   <span class="btn-text"><slot /></span>
 </LinkButton>
 
