--- a/src/pages/kurse/kurs-daten-nutzen.astro
+++ b/src/pages/kurse/kurs-daten-nutzen.astro
@@ -52,9 +52,9 @@ import * as KursSchedule from '@content/kurse/kurs_2_schedule.md';
 ---
 
 <KursLayout title="CorrelLAB: Kurs - Daten nutzen">
-  <h4 slot="subtitle" role="heading" aria-level="1">
-    Kurs: Daten nutzen<br />&ndash;&nbsp;Tools und Methoden praktisch anwenden
-  </h4>
+  <Fragment slot="subtitle">
+    <strong>Kurs: Daten nutzen</strong><br />&ndash;&nbsp;Tools und Methoden praktisch anwenden
+  </Fragment>
   <p slot="teaser">
     Daten helfen erst, wenn man sie richtig nutzt. Aber wie startet ihr? Welche Tools sind gut für
     den Anfang?
