--- a/src/pages/praxisphase.astro
+++ b/src/pages/praxisphase.astro
@@ -6,17 +6,9 @@ import Banner from '@compositions/Banner.astro';
 import PeopleSection from '@compositions/People.astro';
 import KursLayout from '@layouts/KursLayout.astro';
 
-import ImageAnnKristin from '@assets/images/vester-annkristin.jpeg';
 import * as content from '@content/praxisphase.md';
 
-const people = [
-  {
-    name: 'Ann-Kristin Vester',
-    role: 'Geschäftsführung',
-    image: ImageAnnKristin,
-    email: 'lab@correlaid.org?subject=CorrelLAB&body=Hi%20Ann-Kristin%2C',
-  },
-];
+import { people } from '@data/people';
 
 import ScrollColumns from '@compositions/ScrollColumns.astro';
 import stages from '@data/praxisphase.json';
@@ -57,7 +49,7 @@ import stages from '@data/praxisphase.json';
       Hier geht es zur Anmeldung!
     </LabLinkButton>
   </section>
-  <PeopleSection people={people} />
+  <PeopleSection people={[people.annkristin]} />
   <Banner slot="banner" />
   <div class="flex cols center gap-2 pad-8 wrap" slot="footer-links">
     <LabLinkButton href="/kurse/kurs-daten-verstehen">Kurs: Daten verstehen</LabLinkButton>
