--- a/src/compositions/Footer.astro
+++ b/src/compositions/Footer.astro
@@ -59,7 +59,9 @@ const footer_footer_links = [
 <footer class="content-box">
   <div class="footer-inner">
     <div class="column flex rows pb-4">
-      <a href="https://correlaid.org"><CorrelAidLogoMuted /></a>
+      <a href="https://correlaid.org" aria-label="CorrelAid Homepage"
+        ><CorrelAidLogoMuted alt="CorrelAid Logo" /></a
+      >
       <SocialLinks color="var(--color-gray-600)" />
     </div>
     <div class="column">
