typo: page title

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -28,7 +28,7 @@ import { strip_tag } from '@utils/md';
 import { people } from '@data/people';
 ---
 
-<Layout title="Lab Demo">
+<Layout title="CorrelLAB">
   <Hero>
     <Fragment slot="subtitle" set:html={HeroContent.frontmatter.title} />
     <Fragment slot="teaser" set:html={HeroContent.compiledContent()} />
