editorial: mail link

--- a/src/pages/praxisphase.astro
+++ b/src/pages/praxisphase.astro
@@ -36,12 +36,16 @@ import stages from '@data/praxisphase.json';
   </section>
   <section class="prose" set:html={await content.compiledContent()} />
   <ScrollColumns stages={stages} />
-  <section class="prose trim">
+  <section class="prose">
     <h3 class="text-center">So seid ihr dabei</h3>
     <p>
       Für die Praxisphase haben wir in der ersten Kohorte nur zehn Plätze. Die Kosten der
       Praxisphase können durch eine externe Förderung oder eines unserer Stipendien gedeckt werden.
-      Wenn ihr mehr erfahren wollt, sprecht uns gerne an
+    </p>
+    <p>
+      Wenn ihr mehr erfahren wollt, sprecht uns gerne an: <a href="mailto:lab@correlaid.org"
+        >lab@correlaid.org</a
+      >
     </p>
   </section>
   <section class="sticky sticky-bottom">
