fix: trailing slash for internal links

--- a/src/compositions/CoursesCards.astro
+++ b/src/compositions/CoursesCards.astro
@@ -38,8 +38,8 @@ import bullets from '@data/landing-bullets.json';
 
     <Fragment slot="footer">
       <div class="flex rows gap-2 align-start">
-        <LabLinkButton href="/kurse/kurs-daten-verstehen">Kurs: Daten verstehen</LabLinkButton>
-        <LabLinkButton href="/kurse/kurs-daten-nutzen">Kurs: Daten nutzen</LabLinkButton>
+        <LabLinkButton href="/kurse/kurs-daten-verstehen/">Kurs: Daten verstehen</LabLinkButton>
+        <LabLinkButton href="/kurse/kurs-daten-nutzen/">Kurs: Daten nutzen</LabLinkButton>
       </div>
     </Fragment>
   </CardPlain>
@@ -72,7 +72,7 @@ import bullets from '@data/landing-bullets.json';
     </Fragment>
     <Fragment slot="footer">
       <div>
-        <LabLinkButton href="/praxisphase" classes="btn-secondary"
+        <LabLinkButton href="/praxisphase/" classes="btn-secondary"
           >Mehr zur Praxisphase</LabLinkButton
         >
       </div>
