--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -96,9 +96,9 @@ import { people } from '@data/people';
       </ColumnsSection>
 
       <div class="flex cols center gap-2 pt-0 pad-8 wrap">
-        <LabLinkButton href="/kurse/kurs-daten-verstehen">Kurs: Daten verstehen</LabLinkButton>
-        <LabLinkButton href="/kurse/kurs-daten-nutzen">Kurs: Daten nutzen</LabLinkButton>
-        <LabLinkButton href="/praxisphase">Praxisphase</LabLinkButton>
+        <LabLinkButton href="/kurse/kurs-daten-verstehen/">Kurs: Daten verstehen</LabLinkButton>
+        <LabLinkButton href="/kurse/kurs-daten-nutzen/">Kurs: Daten nutzen</LabLinkButton>
+        <LabLinkButton href="/praxisphase/">Praxisphase</LabLinkButton>
       </div>
     </div>
   </main>
