--- a/src/pages/kurse/kurs-daten-nutzen.astro
+++ b/src/pages/kurse/kurs-daten-nutzen.astro
@@ -37,7 +37,7 @@ import * as KursSchedule from '@content/kurse/kurs_2_schedule.md';
   </p>
   <Fragment slot="cta">
     <LabLinkButton href="#start">Kursüberblick</LabLinkButton>
-    <LabLinkButton href="/kurse/kurs-daten-verstehen">Kurs: Daten verstehen</LabLinkButton>
+    <LabLinkButton href="/kurse/kurs-daten-verstehen/">Kurs: Daten verstehen</LabLinkButton>
   </Fragment>
 
   <ColumnsSection center_title>
@@ -137,8 +137,8 @@ import * as KursSchedule from '@content/kurse/kurs_2_schedule.md';
 
   <Banner slot="banner" />
   <div class="flex cols center gap-2 pad-8 wrap" slot="footer-links">
-    <LabLinkButton href="/kurse/kurs-daten-verstehen">Kurs: Daten verstehen</LabLinkButton>
-    <LabLinkButton href="/praxisphase">Zur Praxisphase</LabLinkButton>
+    <LabLinkButton href="/kurse/kurs-daten-verstehen/">Kurs: Daten verstehen</LabLinkButton>
+    <LabLinkButton href="/praxisphase/">Zur Praxisphase</LabLinkButton>
   </div>
 </KursLayout>
 
