--- a/src/pages/kurse/kurs-daten-verstehen.astro
+++ b/src/pages/kurse/kurs-daten-verstehen.astro
@@ -38,7 +38,7 @@ import * as KursSchedule from '@content/kurse/kurs_1_schedule.md';
   </p>
   <Fragment slot="cta">
     <LabLinkButton href="#start">Kursüberblick</LabLinkButton>
-    <LabLinkButton href="/kurse/kurs-daten-nutzen">Kurs: Daten nutzen</LabLinkButton>
+    <LabLinkButton href="/kurse/kurs-daten-nutzen/">Kurs: Daten nutzen</LabLinkButton>
   </Fragment>
 
   <ColumnsSection center_title>
@@ -141,8 +141,8 @@ import * as KursSchedule from '@content/kurse/kurs_1_schedule.md';
   <Banner slot="banner" />
 
   <div class="flex cols center gap-2 pad-8 wrap" slot="footer-links">
-    <LabLinkButton href="/kurse/kurs-daten-nutzen">Kurs: Daten nutzen</LabLinkButton>
-    <LabLinkButton href="/praxisphase">Zur Praxisphase</LabLinkButton>
+    <LabLinkButton href="/kurse/kurs-daten-nutzen/">Kurs: Daten nutzen</LabLinkButton>
+    <LabLinkButton href="/praxisphase/">Zur Praxisphase</LabLinkButton>
   </div>
 </KursLayout>
 
