--- a/src/compositions/CoursesCards.astro
+++ b/src/compositions/CoursesCards.astro
@@ -37,9 +37,9 @@ import bullets from '@data/landing-bullets.json';
     </Fragment>
 
     <Fragment slot="footer">
-      <div class="flex rows gap-2 align-start">
-        <LabLinkButton href="/kurse/kurs-daten-verstehen/">Kurs: Daten verstehen</LabLinkButton>
-        <LabLinkButton href="/kurse/kurs-daten-nutzen/">Kurs: Daten nutzen</LabLinkButton>
+      <div class="flex cols wrap gap-2 align-start">
+        <LabLinkButton href="/kurse/kurs-daten-verstehen/">Daten verstehen</LabLinkButton>
+        <LabLinkButton href="/kurse/kurs-daten-nutzen/">Daten nutzen</LabLinkButton>
       </div>
     </Fragment>
   </CardPlain>
