--- a/src/pages/kurse/kurs-daten-nutzen.astro
+++ b/src/pages/kurse/kurs-daten-nutzen.astro
@@ -128,7 +128,7 @@ import * as KursSchedule from '@content/kurse/kurs_2_schedule.md';
   </section>
 
   <section class="sticky sticky-bottom">
-    <LabLinkButton href="https://pretix.eu/control/event/correlaid/correllab/">
+    <LabLinkButton href="https://pretix.eu/correlaid/correllab/">
       Hier geht es zur Anmeldung!
     </LabLinkButton>
   </section>
