--- a/src/pages/kurse/kurs-daten-verstehen.astro
+++ b/src/pages/kurse/kurs-daten-verstehen.astro
@@ -131,7 +131,7 @@ import * as KursSchedule from '@content/kurse/kurs_1_schedule.md';
   </section>
 
   <section class="sticky sticky-bottom">
-    <LabLinkButton href="https://pretix.eu/control/event/correlaid/correllab/">
+    <LabLinkButton href="https://pretix.eu/correlaid/correllab/">
       Hier geht es zur Anmeldung!
     </LabLinkButton>
   </section>
