--- a/src/pages/praxisphase.astro
+++ b/src/pages/praxisphase.astro
@@ -49,7 +49,7 @@ import stages from '@data/praxisphase.json';
     </p>
   </section>
   <section class="sticky sticky-bottom">
-    <LabLinkButton href="https://pretix.eu/control/event/correlaid/correllab/">
+    <LabLinkButton href="https://pretix.eu/correlaid/correllab/">
       Hier geht es zur Anmeldung!
     </LabLinkButton>
   </section>
